fix logo visible

--- a/react/features/large-video/components/LargeVideo.module.scss
+++ b/react/features/large-video/components/LargeVideo.module.scss
@@ -6,6 +6,7 @@
 .watermark {
     display: none;
     margin: 20px;
+    z-index: 10;
 
     @include media-breakpoint-up(sm) {
         display: block;
